@@ -213,13 +213,14 @@ The module :mod:`socket` exports the following constants and functions:
    *timeout* is supplied, the global default timeout setting returned by
    :func:`getdefaulttimeout` is used.
 
-   .. versionadded:: 2.6
-
    If supplied, *source_address* must be a 2-tuple ``(host, port)`` for the
    socket to bind to as its source address before connecting.  If host or port
    are '' or 0 respectively the OS default behavior will be used.
 
-   .. versionadded:: 2.7
+   .. versionadded:: 2.6
+
+   .. versionchanged:: 2.7
+      *source_address* was added.
 
 
 .. function:: getaddrinfo(host, port[, family[, socktype[, proto[, flags]]]])
